[project]
name = "res-battle-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "fugashi>=1.5.1",
    "google-api-python-client>=2.185.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.57.1",
    "unidic>=1.1.0",
]
